test/modules/standard/FileSystem/lydia/copyTree/dest_existed.chpl
use FileSystem;

copyTree("a", "existing_dir");
// Try copying onto